[BUGFIX] Avoid blurry spinning icons

--- a/assets/scss/icons.scss
+++ b/assets/scss/icons.scss
@@ -53,7 +53,6 @@ $icon-opacity-disabled: .5 !default;
         display: block;
         height: 100%;
         width: 100%;
-        transform: translate3d(0, 0, 0);
     }
     * {
         display: block;
